--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -1170,109 +1170,144 @@
                         </table>
                     </div>
                     <div id="spells" class="tab-pane table-responsive" role="tabpanel" style="display: none">
-                        <div class="panel" ng-repeat="item in spellsBySchool">
-                            <h3 class="panel-heading">{{item.school.name}}</h3>
-                            <div class="panel-body table-responsive">
-                                <table class="table table-hover mobile">
-                                    <thead class="mobile">
-                                    <tr class="mobile">
-                                        <th>Заклинание</th>
-                                        <th>Сложность</th>
-                                        <th>Мана</th>
-                                        <th>Поддержание</th>
-                                        <th></th>
-                                        <th>Уровень</th>
-                                        <th>Стоимость</th>
-                                        <th></th>
-                                    </tr>
-                                    </thead>
-                                    <tbody class="mobile">
-                                    <tr class="mobile"
-                                        ng-repeat="spellItem in item.spells">
-                                        <td class="text-right mobile spell">
-                                            <div class="text-left">
-                                                {{spellItem.spell.name}}
-                                            </div>
-                                        </td>
-
-                                        <td class="text-right mobile spell">
-                                            <div class="text-left">
-                                                {{spellItem.spell.complexity}}
-                                            </div>
-                                        </td>
-
-                                        <td class="text-right mobile spell">
-                                            <div class="text-left">
-                                                {{spellItem.spell.mana}}
-                                            </div>
-                                        </td>
-
-                                        <td class="text-right mobile spell">
-                                            <div class="text-left" ng-if="spellItem.spell.mana_support != null">
-                                                {{spellItem.spell.mana_support}} {{spellItem.spell.mana_sup_time}}
-                                            </div>
-                                            <div class="text-left" ng-if="spellItem.spell.mana_support == null">
-                                                -
-                                            </div>
-                                        </td>
-
-                                        <td class="text-right mobile spell">
-                                            <div class="btn-group btn-group-justified plus-minus-block">
-                                                <div class="btn-group">
-                                                    <button class="btn btn-rounded btn-sm btn-secondary"
-                                                            ng-click=""
-                                                            type="button"
-                                                            ng-disabled="spellItem.personageSpell == null">
-                                                        <i class="icmn-minus"></i>
-                                                    </button>
-                                                </div>
-                                                <div class="btn-group">
-                                                    <button class="btn btn-rounded btn-sm btn-primary"
-                                                            ng-click=""
-                                                            type="button"
-                                                            ng-disabled="spellItem.personageSpell == null">
-                                                        <i class="icmn-plus"></i>
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </td>
-
-                                        <td class="text-right mobile spell">
-                                            <div class="text-left" ng-if="spellItem.personageSpell == null">
-                                                -
-                                            </div>
-                                            <div class="text-left" ng-if="spellItem.personageSpell != null">
-                                                {{spellItem.personageSpell.level}}
-                                            </div>
-                                        </td>
-
-                                        <td class="text-right mobile spell">
-                                            <div class="text-left">
-                                                {{spellItem.spell.cost}}
-                                            </div>
-                                        </td>
-
-                                        <td class="text-right mobile flaw actions">
-                                            <div class="text-center">
-                                                <div ng-if="spellItem.personageSpell == null">
-                                                    <button class="btn btn-rounded btn-warning btn-sm"
-                                                            href="javascript: void(0)"
-                                                            ng-click="">
-                                                        Добавить
-                                                    </button>
-                                                </div>
-                                                <div ng-if="spellItem.personageSpell != null">
-                                                    <a class="link-underlined link-blue" href="javascript: void(0)"
-                                                       ng-click="">
-                                                        Удалить
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    </tbody>
-                                </table>
+                        <div class="row hidden-xs-down hidden-sm-down">
+                            <div class="col-md-2">
+                                <h2 style="padding-top: 10px; padding-left: 5px"><span class="label label-warning">Категории:</span>
+                                </h2>
                             </div>
+                            <div class="col-md-2">
+                                <div class="checkbox">
+                                    <label>
+                                        <input name="magicSchools" type="checkbox" ng-model="filter.schools">
+                                        Все школы
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="btn btn-rounded btn-info-outline filter-button hidden-md-up"
+                                ng-click="showFlawsCategoriesFilter()">Категория <i class="icmn-filter"></i>
+                        </button>
+                        <div class="panel filter-panel" ng-show="showFlawsCategories">
+                            <h3 class="panel-heading" style="margin: 0; padding: 15px; padding-left: 50px;">
+                                Категории</h3>
+                            <div class="panel-body">
+                                <div class="col-md-2">
+                                    <div class="checkbox">
+                                        <label>
+                                            <input name="magicSchools" type="checkbox" ng-model="filter.schools">
+                                            Все школы
+                                        </label>
+                                    </div>
+                                </div>
+                                <button class="btn btn-rounded btn-info-outline filter-button"
+                                        ng-click="hideFlawsCategoriesFilter()">Применить <i class="icmn-filter"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <br/>
+                        <div ng-repeat="item in spellsBySchool" ng-hide="!item.added && !filter.schools">
+                            <h3>{{item.school.name}}</h3>
+                            <table class="table table-hover mobile">
+                                <thead class="mobile">
+                                <tr class="mobile">
+                                    <th>Заклинание</th>
+                                    <th>Сложность</th>
+                                    <th>Мана</th>
+                                    <th>Поддержание</th>
+                                    <th></th>
+                                    <th>Уровень</th>
+                                    <th>Стоимость</th>
+                                    <th></th>
+                                </tr>
+                                </thead>
+                                <tbody class="mobile">
+                                <tr class="mobile"
+                                    ng-repeat="spellItem in item.spells"
+                                    ng-style="changeColorNotAvailable(item.added, spellItem.personageSpell)">
+                                    <td class="text-right mobile spell">
+                                        <div class="text-left">
+                                            {{spellItem.spell.name}}
+                                        </div>
+                                    </td>
+
+                                    <td class="text-right mobile spell">
+                                        <div class="text-left">
+                                            {{spellItem.spell.complexity}}
+                                        </div>
+                                    </td>
+
+                                    <td class="text-right mobile spell">
+                                        <div class="text-left">
+                                            {{spellItem.spell.mana}}
+                                        </div>
+                                    </td>
+
+                                    <td class="text-right mobile spell">
+                                        <div class="text-left" ng-if="spellItem.spell.mana_support != null">
+                                            {{spellItem.spell.mana_support}} {{spellItem.spell.mana_sup_time}}
+                                        </div>
+                                        <div class="text-left" ng-if="spellItem.spell.mana_support == null">
+                                            -
+                                        </div>
+                                    </td>
+
+                                    <td class="text-right mobile spell">
+                                        <div class="btn-group btn-group-justified plus-minus-block">
+                                            <div class="btn-group">
+                                                <button class="btn btn-rounded btn-sm btn-secondary"
+                                                        ng-click=""
+                                                        type="button"
+                                                        ng-disabled="spellItem.personageSpell == null">
+                                                    <i class="icmn-minus"></i>
+                                                </button>
+                                            </div>
+                                            <div class="btn-group">
+                                                <button class="btn btn-rounded btn-sm btn-primary"
+                                                        ng-click=""
+                                                        type="button"
+                                                        ng-disabled="spellItem.personageSpell == null">
+                                                    <i class="icmn-plus"></i>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </td>
+
+                                    <td class="text-right mobile spell">
+                                        <div class="text-left" ng-if="spellItem.personageSpell == null">
+                                            -
+                                        </div>
+                                        <div class="text-left" ng-if="spellItem.personageSpell != null">
+                                            {{spellItem.personageSpell.level}}
+                                        </div>
+                                    </td>
+
+                                    <td class="text-right mobile spell">
+                                        <div class="text-left">
+                                            {{spellItem.spell.cost}}
+                                        </div>
+                                    </td>
+
+                                    <td class="text-right mobile spell actions">
+                                        <div class="text-center">
+                                            <div ng-if="spellItem.personageSpell == null">
+                                                <button class="btn btn-rounded btn-warning btn-sm"
+                                                        href="javascript: void(0)"
+                                                        ng-click=""
+                                                        ng-disabled="!item.added">
+                                                    Добавить
+                                                </button>
+                                            </div>
+                                            <div ng-if="spellItem.personageSpell != null">
+                                                <a class="link-underlined link-blue" href="javascript: void(0)"
+                                                   ng-click="">
+                                                    Удалить
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
