--- a/public/assets/common/css/source/custom.css
+++ b/public/assets/common/css/source/custom.css
@@ -423,6 +423,14 @@ only screen and (max-width: 760px),
 	td.mobile.merit:nth-of-type(1):before { content: "Достоинство"; }
 	td.mobile.merit:nth-of-type(2):before { content: "Требования"; }
 	td.mobile.merit:nth-of-type(3):before { content: "Стоимость"; }
+
+	td.mobile.spell:nth-of-type(1):before { content: "Заклинание"; }
+	td.mobile.spell:nth-of-type(2):before { content: "Сложность"; }
+	td.mobile.spell:nth-of-type(3):before { content: "Мана"; }
+	td.mobile.spell:nth-of-type(4):before { content: "Поддержание"; }
+	td.mobile.spell:nth-of-type(5):before { content: "Кнопки"; }
+	td.mobile.spell:nth-of-type(6):before { content: "Уровень"; }
+	td.mobile.spell:nth-of-type(7):before { content: "Стоимость"; }
 }
 
 @media
